--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,11 +1,15 @@
 *,
 *::before,
-*::after{
+*::after {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-html{
+html {
     font-size: 62.5%;
+}
+
+body {
+    font-family: 'Oxanium', cursive;
 }
