update the index.html added _footer.scss & _header.scss=>layout updated the _typography and _base.scss updated the _variables.scss=> abstract updated main.scss

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,4 +12,6 @@ html {
 
 body {
     font-family: 'Oxanium', cursive;
+    background-color: $bgcolor-primary-darkBlue;
+    color: $color-primary-white;
 }
